src/main.scss
.transition {
  transition: all 0.3s ease-in-out;
}

::-webkit-scrollbar-thumb {
  border-radius: 8px;
  background-color: #c12fe9;
}


::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

::-webkit-scrollbar-track {
  border-radius: 8px;
  background-color: #e7e7e7;
  border: 1px solid #cacaca;
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

